2010-10-27  Eric Uhrhane  <ericu@chromium.org>

        Reviewed by David Levin.

        [Chromium] Metadata queries should return full file info, not just modification time
        https://bugs.webkit.org/show_bug.cgi?id=48098

        * src/AssertMatchingEnums.cpp: Ensure WebFileInfo and FileMetadata use the same values for file/directory indicators.
        * src/WebFileSystemCallbacksImpl.cpp:
        (WebKit::WebFileSystemCallbacksImpl::didReadMetadata): Pass through the new information.

2010-10-27  Kenneth Russell  <kbr@google.com>

        Reviewed by Dimitri Glazkov.

        [chromium] WebGL does not work with the compositor in test_shell
        https://bugs.webkit.org/show_bug.cgi?id=48470

        * src/WebGraphicsContext3DDefaultImpl.cpp:
        (WebKit::WebGraphicsContext3DDefaultImpl::resolveMultisampledFramebuffer):
         - Properly restore the draw framebuffer after resolving.
        (WebKit::WebGraphicsContext3DDefaultImpl::prepareTexture):
         - Make the context current before calling resolveMultisampledFramebuffer.

2010-10-27  Stuart Morgan  <stuartmorgan@chromium.org>

        Reviewed by David Levin.

        Include caps lock state when converting NSEvent modifiers to
        WebInputEvent

        https://bugs.webkit.org/show_bug.cgi?id=47917

        * src/mac/WebInputEventFactory.mm:
        (WebKit::modifiersFromEvent):

2010-10-27  Chris Rogers  <crogers@google.com>

        Reviewed by James Robinson.

        Add ENABLE_WEB_AUDIO feature enable flag (initially disabled) for Chromium
        https://bugs.webkit.org/show_bug.cgi?id=48465

        * features.gypi:

2010-10-25  Tony Chang  <tony@chromium.org>

        Reviewed by Anders Carlsson.

        compile TestNetscapePlugIn on chromium linux
        https://bugs.webkit.org/show_bug.cgi?id=48274

        * WebKit.gyp: Enable compilation of TestNetscapePlugIn on Linux.

2010-10-27  Satish Sampath  <satish@chromium.org>

        Unreviewed, rolling out r70665.