@@ -46,13 +46,6 @@ public:
     // text are returned via the listener interface.
     virtual bool startRecognition(int requestId, const WebRect& elementRect, const WebString& grammar)
     {
-        startRecognition(requestId, elementRect);
-        return false;
-    }
-
-    // FIXME: Remove this method once chromium implements the above method.
-    virtual bool startRecognition(int requestId, const WebRect&)
-    {
         WEBKIT_ASSERT_NOT_REACHED();
         return false;
     }
